--- a/messages.html
+++ b/messages.html
@@ -11,7 +11,7 @@
     <div class = "content">
       <div class="sidenav">
           <div class="tooltip">
-              <a href="home.php">
+              <a href="home.html">
                 <center>
                   <img src="media/home.png" width="47" style="padding-bottom: 10px">
                 </center>
@@ -19,7 +19,7 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip">
-              <a href="profile.php">
+              <a href="profile.html">
                 <center>
                   <img src="media/profile.png" width="45" height="45">
                 </center>
@@ -27,7 +27,7 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="tasks.php">
+              <a href="tasks.html">
                 <center>
                   <img src="media/tasks.png" width="50" height="50">
                 </center>
@@ -35,7 +35,7 @@
               <span class="tooltiptext">Tasks</span>
             </div>
             <div class="tooltip">
-              <a href="messages.php">
+              <a href="messages.html">
                 <center>
                   <img src="media/messages.png" width="60" height="60">
                 </center>
@@ -43,7 +43,7 @@
               <span class="tooltiptext">Messages</span>
             </div>
             <div class="tooltip">
-              <a href="calendar.php">
+              <a href="calendar.html">
                 <center>
                   <img src="media/calendar.png" width="40" height="40">
                 </center>
@@ -51,7 +51,7 @@
               <span class="tooltiptext">Calendar</span>
             </div>
             <div class="tooltip">
-              <a href="settings.php">
+              <a href="settings.html">
                 <center>
                   <img src="media/settings.png" width="50" style="margin-top: 10px">
                 </center>
@@ -60,7 +60,7 @@
             </div>
             <center style="margin-top: 43vh;"></center>
             <div class="tooltip">
-              <a href="index.php?logout='1'">
+              <a href="index.html?logout='1'">
                 <center>
                   <img src = "media/logout.png" width="40" style="bottom: 0">
                 </center>
@@ -195,7 +195,7 @@
     <div style="font-size:20px">
       You are not logged in!
     </div>
-    <meta http-equiv="refresh" content="2; URL='/index.php">
+    <meta http-equiv="refresh" content="2; URL='/index.html">
     <?php endif ?>
     <script type="text/javascript" src="script.js">
     </script>
