--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
     <div class="content">
       <div class="sidenav">
         <div class="tooltip">
-          <a href="home.php">
+          <a href="home.html">
             <center>
               <img src="media/home.png" width="47" style="padding-bottom: 10px">
             </center>
@@ -24,7 +24,7 @@
           <span class="tooltiptext">Home</span>
         </div>
         <div class="tooltip">
-          <a href="profile.php">
+          <a href="profile.html">
             <center>
               <img src="media/profile.png" width="45" height="45">
             </center>
@@ -32,7 +32,7 @@
           <span class="tooltiptext">Profile</span>
         </div>
         <div class="tooltip">
-          <a href="tasks.php">
+          <a href="tasks.html">
             <center>
               <img src="media/tasks.png" width="50" height="50">
             </center>
@@ -40,7 +40,7 @@
           <span class="tooltiptext">Tasks</span>
         </div>
         <div class="tooltip">
-          <a href="messages.php">
+          <a href="messages.html">
             <center>
               <img src="media/messages.png" width="60" height="60">
             </center>
@@ -48,7 +48,7 @@
           <span class="tooltiptext">Messages</span>
         </div>
         <div class="tooltip">
-          <a href="calendar.php">
+          <a href="calendar.html">
             <center>
               <img src="media/calendar.png" width="40" height="40" style="margin-bottom:5px">
             </center>
@@ -56,7 +56,7 @@
           <span class="tooltiptext">Calendar</span>
         </div>
         <div class="tooltip">
-          <a href="settings.php">
+          <a href="settings.html">
             <center>
               <img src="media/settings.png" width="50" style="margin-top: 5px">
             </center>
@@ -65,7 +65,7 @@
         </div>
         <center style="margin-top: 33vh;"></center>
         <div class="tooltip">
-          <a href="index.php?logout='1'">
+          <a href="index.html?logout='1'">
             <center>
               <img src="media/logout.png" width="40" style="bottom: 0">
             </center>
@@ -149,7 +149,7 @@
     <div style="font-size:20px">
       You are not logged in!
     </div>
-    <meta http-equiv="refresh" content="2; URL='/index.php">
+    <meta http-equiv="refresh" content="2; URL='/index.html">
     <?php endif ?>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
