--- a/tasks.html
+++ b/tasks.html
@@ -12,7 +12,7 @@
       <div class = "content">
         <div class="sidenav">
           <div class="tooltip">
-              <a href="home.php">
+              <a href="home.html">
                 <center>
                   <img src="media/home.png" width="47" style="padding-bottom: 10px">
                 </center>
@@ -20,7 +20,7 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip">
-              <a href="profile.php">
+              <a href="profile.html">
                 <center>
                   <img src="media/profile.png" width="45" height="45">
                 </center>
@@ -28,7 +28,7 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="tasks.php">
+              <a href="tasks.html">
                 <center>
                   <img src="media/tasks.png" width="50" height="50">
                 </center>
@@ -36,7 +36,7 @@
               <span class="tooltiptext">Tasks</span>
             </div>
             <div class="tooltip">
-              <a href="messages.php">
+              <a href="messages.html">
                 <center>
                   <img src="media/messages.png" width="60" height="60">
                 </center>
@@ -44,7 +44,7 @@
               <span class="tooltiptext">Messages</span>
             </div>
             <div class="tooltip">
-              <a href="calendar.php">
+              <a href="calendar.html">
                 <center>
                   <img src="media/calendar.png" width="40" height="40">
                 </center>
@@ -52,7 +52,7 @@
               <span class="tooltiptext">Calendar</span>
             </div>
             <div class="tooltip">
-              <a href="settings.php">
+              <a href="settings.html">
                 <center>
                   <img src="media/settings.png" width="50" style="margin-top: 10px">
                 </center>
@@ -61,7 +61,7 @@
             </div>
             <center style="margin-top: 43vh;"></center>
             <div class="tooltip">
-              <a href="index.php?logout='1'">
+              <a href="index.html?logout='1'">
                 <center>
                   <img src = "media/logout.png" width="40" style="bottom: 0">
                 </center>
@@ -171,7 +171,7 @@
     <div style="font-size:20px">
       You are not logged in!
     </div>
-    <meta http-equiv="refresh" content="2; URL='/index.php">
+    <meta http-equiv="refresh" content="2; URL='/index.html">
     <?php endif ?>
     <script type="text/javascript" src="js/tasks.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
