--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <br>
-    <a href="index.php">
+    <a href="index.html">
       <center>
         <img src="media/logo.png" height="45" alt="logo">
       </center>
@@ -29,7 +29,7 @@
           <h1>Log In</h1>
           <h3>Welcome Back</h3>
         </div>
-        <form id="formfull" action="index.php" method="post">
+        <form id="formfull" action="index.html" method="post">
         <div class="row">
           <div class="rowfakediv"><img src="https://png.icons8.com/material/30/424242/mail.png" alt="usernameicon"></div>
           <div class="flex2">
@@ -53,7 +53,7 @@
           </div>
         </div>
         <a href="forgot" class="forgot">Forgot Password?</a>
-        <h3 class="dontalready">Don't have an account? <a href="register.php" class="dontalreadylink">Sign Up</a></h3>
+        <h3 class="dontalready">Don't have an account? <a href="register.html" class="dontalreadylink">Sign Up</a></h3>
           <div class="btns">
             <button type="submit" class="login" name="login">Log In</button>
           </div>
@@ -67,7 +67,7 @@
     </div>
   </center>
   <footer>
-      <center><a href="about.php">about</a> | <a href="help.php">help</a> | © collabcove</center>
+      <center><a href="about.html">about</a> | <a href="help.html">help</a> | © collabcove</center>
   </footer>
   <!--<center><div style="border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; -khtml-border-radius: 10px; -icab-border-radius: 10px; -o-border-radius: 10px; border-top: 1px solid #cccccc; border-bottom: 5px solid #eeeeee; background: #F9F9F9; border: 2px solid #cccccc; margin-bottom: 5px; width: 20%"; align="center";>x<br>y</div></center>-->
   <script src="js/form.js"></script>
