--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </span>
           </div>
         </div>
-        <a href="forgot" class="forgot">Forgot Password?</a>
+        <a href="forgot.html" class="forgot">Forgot Password?</a>
         <h3 class="dontalready">Don't have an account? <a href="register.html" class="dontalreadylink">Sign Up</a></h3>
           <div class="btns">
             <button type="submit" class="login" name="login">Log In</button>
