--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   </head>
   <body><!--find free use image-->
-      <?php if  (isset($_SESSION['success'])): ?>
+      <!--<?php if  (isset($_SESSION['success'])): ?>-->
         <div class = "content">
           <div class="sidenav">
             <div class="tooltip">
@@ -84,12 +84,12 @@
         Hello
       </div>
     </div>
-    <?php else: ?>
+    <!--<?php else: ?>
     <div style="font-size:20px">
       You are not logged in!
     </div>
     <meta http-equiv="refresh" content="2; URL='/index.html">
-    <?php endif ?>
+    <?php endif ?>-->
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
