--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 
   <body>
     <!--find free use image-->
-    <?php if  (isset($_SESSION['success'])): ?>
+    <!--<?php if  (isset($_SESSION['success'])): ?>-->
     <div class="content">
       <div class="sidenav">
         <div class="tooltip">
@@ -145,12 +145,12 @@
         </table>
       </div>
     </div>
-    <?php else: ?>
+    <!--<?php else: ?>
     <div style="font-size:20px">
       You are not logged in!
     </div>
     <meta http-equiv="refresh" content="2; URL='/index.html">
-    <?php endif ?>
+    <?php endif ?>-->
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 
