--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--find free use image-->
-  <?php if  (isset($_SESSION['success'])): ?>
+  <!--<?php if  (isset($_SESSION['success'])): ?>-->
   <div class="content">
     <div class="sidenav">
             <div class="tooltip">
@@ -137,12 +137,12 @@
   </div>
 
 
-  <?php else: ?>
+  <!--<?php else: ?>
     <div style="font-size:20px">
       You are not logged in!
     </div>
     <meta http-equiv="refresh" content="2; URL='/index.html">
-  <?php endif ?>
+  <?php endif ?>-->
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 
