--- a/tasks.html
+++ b/tasks.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   </head>
   <body onload="loadTasks()"><!--find free use image-->
-    <?php if  (isset($_SESSION['success'])): ?>
+    <!--<?php if  (isset($_SESSION['success'])): ?>-->
       <div class = "content">
         <div class="sidenav">
           <div class="tooltip">
@@ -167,12 +167,12 @@
     <img id="taskButton" src="media/plus_blue.png" onclick="newTask()" />
 
     </div>
-    <?php else: ?>
+    <!--<?php else: ?>
     <div style="font-size:20px">
       You are not logged in!
     </div>
     <meta http-equiv="refresh" content="2; URL='/index.html">
-    <?php endif ?>
+    <?php endif ?>-->
     <script type="text/javascript" src="js/tasks.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
