--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   </head>
   <body><!--find free use image-->
-      <?php if  (isset($_SESSION['success'])): ?>
+      <!--<?php if  (isset($_SESSION['success'])): ?>-->
         <div class = "content">
           <div class="sidenav">
             <div class="tooltip">
@@ -82,7 +82,7 @@
     <div class="main" style="color:red;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
       PAGE NOT FOUND
     </div>
-    <?php else: ?>
+    <!--<?php else: ?>
     <br>
     <a href="index.html">
       <center>
@@ -92,11 +92,11 @@
     <br>
     <p class="line"></p>
     <center style="margin-top: 40vh;"></center>
-    <div style="color:red;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
-      PAGE NOT FOUND
+    <div style="color:red;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->-->
+      <!--PAGE NOT FOUND
     </div>
     <meta http-equiv="refresh" content="-1; URL='/index.html">
-    <?php endif ?>
+    <?php endif ?>-->
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
