commented out the messages/calendar pages snip snip

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
               </a>
               <span class="tooltiptext">Tasks</span>
             </div>
-            <div class="tooltip">
+            <!--<div class="tooltip">
               <a href="messages.html">
                 <center>
                   <img src="media/messages.png" width="60" height="60">
@@ -51,7 +51,7 @@
                 </center>
               </a>
               <span class="tooltiptext">Calendar</span>
-            </div>
+            </div>-->
             <div class="tooltip">
               <a href="settings.html">
                 <center>
