commented out messages and calendar

--- a/profile.html
+++ b/profile.html
@@ -39,22 +39,23 @@
           </a>
           <span class="tooltiptext">Tasks</span>
         </div>
-        <div class="tooltip">
-          <a href="messages.html">
-            <center>
-              <img src="media/messages.png" width="60" height="60">
-            </center>
-          </a>
-          <span class="tooltiptext">Messages</span>
-        </div>
-        <div class="tooltip">
-          <a href="calendar.html">
-            <center>
-              <img src="media/calendar.png" width="40" height="40" style="margin-bottom:5px">
-            </center>
-          </a>
-          <span class="tooltiptext">Calendar</span>
-        </div>
+            <!--<div class="tooltip">
+              <a href="messages.html">
+                <center>
+                  <img src="media/messages.png" width="60" height="60">
+                </center>
+              </a>
+              <span class="tooltiptext">Messages</span>
+            </div>
+            <div class="tooltip">
+              <a href="calendar.html">
+                <center>
+                  <img src="media/calendar.png" width="40" height="40">
+                </center>
+              </a>
+              <span class="tooltiptext">Calendar</span>
+            </div>-->
+
         <div class="tooltip">
           <a href="settings.html">
             <center>
