commented out stuff

--- a/tasks.html
+++ b/tasks.html
@@ -35,7 +35,7 @@
               </a>
               <span class="tooltiptext">Tasks</span>
             </div>
-            <div class="tooltip">
+            <!--<div class="tooltip">
               <a href="messages.html">
                 <center>
                   <img src="media/messages.png" width="60" height="60">
@@ -50,7 +50,8 @@
                 </center>
               </a>
               <span class="tooltiptext">Calendar</span>
-            </div>
+            </div>-->
+
             <div class="tooltip">
               <a href="settings.html">
                 <center>
