--- a/home.html
+++ b/home.html
@@ -29,13 +29,22 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
+              <a href="settings.html">
+                <center>
+                  <img src="media/plus.png" width="40" style="margin-top: 5px">
+                </center>
+              </a>
+              <span class="tooltiptext">Settings</span>
+            </div>
+              
+            <!--<div class="tooltip">
               <a href="tasks.html">
                 <center>
                   <img src="media/tasks.png" width="50" height="50">
                 </center>
               </a>
               <span class="tooltiptext">Tasks</span>
-            </div>
+            </div>-->
             <!--<div class="tooltip">
               <a href="messages.html">
                 <center>
@@ -76,13 +85,51 @@
             </h1>
           </div>
           <br>
-          <div width="100%" class="orLine"></div>
     </div>
     <br>
     <div class="main">
-      <div style="font-size:72px; text-align: center">
-        Hello
-      </div>
+        <table class="projectTable">
+            <tr>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="projectBox">
+                        <h2>Project Name</h2>
+                        <p>Project Description</p>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
     <!--<?php else: ?>
     <div style="font-size:20px">
