--- a/tasks.html
+++ b/tasks.html
@@ -28,13 +28,22 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
+              <a href="settings.html">
+                <center>
+                  <img src="media/plus.png" width="40" style="margin-top: 5px">
+                </center>
+              </a>
+              <span class="tooltiptext">Settings</span>
+            </div>
+              
+            <!--<div class="tooltip">
               <a href="tasks.html">
                 <center>
                   <img src="media/tasks.png" width="50" height="50">
                 </center>
               </a>
               <span class="tooltiptext">Tasks</span>
-            </div>
+            </div>-->
             <!--<div class="tooltip">
               <a href="messages.html">
                 <center>
@@ -76,7 +85,6 @@
             </h1>
           </div>
           <br>
-        <div width="100%" class="orLine"></div>
     </div>
     <div id="newTask">
       <div id="taskContent">
@@ -93,6 +101,53 @@
       </div>
     </div>
     <br>
+      
+        <div class="main">
+        <table class="taskTable">
+            <tr>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+                <td>
+                    <div class="taskBox">
+                        <h2>Task Name</h2>
+                        <p>Task Description</p>
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <!--<img id="taskButton" src="media/plus_blue.png" onclick="newTask()" />-->
+    </div>
+    <!-- OLD  
     <div class="main" style="margin-left:120px">
       <table width="100%" style="table-layout: fixed; text-align: center;" id="taskTable">
         <tr style="font-size:18px">
@@ -164,10 +219,7 @@
         </tr>
       </table>
       <br>
-      <br><br>
-    <img id="taskButton" src="media/plus_blue.png" onclick="newTask()" />
-
-    </div>
+      <br><br>-->
     <!--<?php else: ?>
     <div style="font-size:20px">
       You are not logged in!
