--- a/tasks.html
+++ b/tasks.html
@@ -145,7 +145,7 @@
                 </td>
             </tr>
         </table>
-        <!--<img id="taskButton" src="media/plus_blue.png" onclick="newTask()" />-->
+        <img id="taskButton" src="media/new_plus_blue.png" onclick="newTask()" />
     </div>
     <!-- OLD  
     <div class="main" style="margin-left:120px">
