--- a/tasks.html
+++ b/tasks.html
@@ -27,14 +27,14 @@
               </a>
               <span class="tooltiptext">Profile</span>
             </div>
-            <div class="tooltip">
+            <!--<div class="tooltip">
               <a href="settings.html">
                 <center>
                   <img src="media/plus.png" width="40" style="margin-top: 5px">
                 </center>
               </a>
               <span class="tooltiptext">Settings</span>
-            </div>
+            </div>-->
               
             <!--<div class="tooltip">
               <a href="tasks.html">
