--- a/tasks.html
+++ b/tasks.html
@@ -106,27 +106,21 @@
         <div class="main">
         <table class="taskTable">
             <tr>
-                <td>
-                    <div class="taskBox">
-                        <h2>Task Name</h2>
-                        <p>Task Description</p>
-                    </div>
+                <td class="taskBox">
+                    <h2>Task Name</h2>
+                    <p>Task Description</p>
                 </td>
             </tr>
             <tr>
-                <td>
-                    <div class="taskBox">
-                        <h2>Task Name</h2>
-                        <p>Task Description</p>
-                    </div>
+                <td class="taskBox">
+                    <h2>Task Name</h2>
+                    <p>Task Description</p>
                 </td>
             </tr>
             <tr>
-                <td>
-                    <div class="taskBox">
-                        <h2>Task Name</h2>
-                        <p>Task Description</p>
-                    </div>
+                <td class="taskBox">
+                    <h2>Task Name</h2>
+                    <p>Task Description</p>
                 </td>
             </tr>
 
