click on project to go to task page

--- a/home.html
+++ b/home.html
@@ -92,18 +92,21 @@
             <tr>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
                 </td>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
                 </td>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
@@ -112,18 +115,21 @@
             <tr>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
                 </td>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
                 </td>
                 <td>
                     <div class="projectBox">
+                        <a href="tasks.html">
                         <h2>Project Name</h2>
                         <p>Project Description</p>
                     </div>
