pretend new project feature works

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link type = "text/css" rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   </head>
-  <body><!--find free use image-->
+  <body onload="loadProjects()"><!--find free use image-->
       <!--<?php if  (isset($_SESSION['success'])): ?>-->
         <div class = "content">
           <div class="sidenav">
@@ -86,6 +86,21 @@
           </div>
           <br>
     </div>
+      <div id="newProject">
+      <div id="projectContent">
+        <span id="close-button" onclick="closeWindow1()">&times;</span>
+        <form>
+          Create a new project <br>
+          Project name: <input type="text" name="newProjectName" class = "taskInput" id="project_name" > <br>
+          <!--People on task: <input type="text" name="newTaskPeople" class = "taskInput" id="task_person"> <br>-->
+          Due date: <input type="date" name="newProjectDate" class = "taskInput" id="project_date"> <br>
+          Project description: <input type="text" name="newProjectDescrip" class = "taskInput" id="project_descrip"> <br>
+          <?php include('errors.php') ?>
+          <input type="submit" value="Done" id="projectDone" onclick="createProject()"> <!-- ; loadTasks()-->
+        </form>
+
+      </div>
+    </div>
     <br>
     <div class="main">
         <table class="projectTable">
@@ -136,6 +151,7 @@
                 </td>
             </tr>
         </table>
+        <img id="taskButton" src="media/new_plus_blue.png" onclick="newProject()" />
     </div>
     <!--<?php else: ?>
     <div style="font-size:20px">
@@ -144,5 +160,6 @@
     <meta http-equiv="refresh" content="2; URL='/index.html">
     <?php endif ?>-->
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/tasks.js"></script>
   </body>
 </html>
