--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
     <div class="main">
         <ul id="projectTable">
         </ul>
-        <img id="taskButton" src="media/new_plus_blue.png" onclick="newProject()" />
+        <img id="taskButton" src="media/new_plus_blue.png" onclick="createProject()" />
     </div>
     <!--<?php else: ?>
     <div style="font-size:20px">
