Update 404.html, about.html, calendar.html, help.html, index.html, messages.html, profile.html, register.html, tasks.html, home.html files Deleted 404.php, about.php, calendar.php, help.php, index.php, messages.php, profile.php, register.php, tasks.php files

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <div class = "content">
           <div class="sidenav">
             <div class="tooltip">
-              <a href="home.php">
+              <a href="home.html">
                 <center>
                   <img src="media/home.png" width="47" style="padding-bottom: 10px">
                 </center>
@@ -21,7 +21,7 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip">
-              <a href="profile.php">
+              <a href="profile.html">
                 <center>
                   <img src="media/profile.png" width="45" height="45">
                 </center>
@@ -29,7 +29,7 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="tasks.php">
+              <a href="tasks.html">
                 <center>
                   <img src="media/tasks.png" width="50" height="50">
                 </center>
@@ -53,7 +53,7 @@
               <span class="tooltiptext">Calendar</span>
             </div>-->
             <div class="tooltip">
-              <a href="settings.php">
+              <a href="settings.html">
                 <center>
                   <img src="media/settings.png" width="50" style="margin-top: 5px">
                 </center>
@@ -62,7 +62,7 @@
             </div>
             <center style="margin-top: 50vh;"></center>
             <div class="tooltip">
-              <a href="index.php?logout='1'">
+              <a href="index.html?logout='1'">
                 <center>
                   <img src = "media/logout.png" width="40" style="bottom: 0">
                 </center>
