--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <div class = "content">
           <div class="sidenav">
             <div class="tooltip">
-              <a href="home.php">
+              <a href="home.html">
                 <center>
                   <img src="media/home.png" width="47">
                 </center>
@@ -27,7 +27,7 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip">
-              <a href="profile.php">
+              <a href="profile.html">
                 <center>
                   <img src="media/profile.png" width="45" height="45">
                 </center>
@@ -35,7 +35,7 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="settings.php">
+              <a href="settings.html">
                 <center>
                   <img src="media/settings.png" width="50">
                 </center>
@@ -44,7 +44,7 @@
             </div>
             <center style="margin-top: 50vh;"></center>
             <div class="tooltip">
-              <a href="index.php?logout='1'">
+              <a href="index.html?logout='1'">
                 <center>
                   <img src = "media/logout.png" width="40" style="bottom: 0">
                 </center>
