--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
   <body>
 
     <br>
-    <a href="index.php">
+    <a href="index.html">
       <center>
         <img src="media/logo.png" height="45" alt="logo">
       </center>
@@ -25,7 +25,7 @@
   <br>
   <br>
   <center>
-    <form action="register.php" method="post">
+    <form action="register.html" method="post">
       <div width=22vw>
         <input class="input_field" type="text" name="email" placeholder="Email" value="" required><br><br>
         <input class="input_field" type="text" name="name" placeholder="Full Name" value="" required><br><br>
@@ -36,7 +36,7 @@
       </div>
       <table width="27%">
         <tr>
-          <td width="50%">Already have an account? <a href="index.php">Login</a></td>
+          <td width="50%">Already have an account? <a href="index.html">Login</a></td>
           <td width="50%" valign="middle" align="right">
             <button type="submit" class="login" name="register">Register</button>
           </td>
@@ -45,7 +45,7 @@
     </form>
   </center>
   <footer>
-      <center><a href="about.php">about</a> | <a href="help.php">help</a> | © collabcove</center>
+      <center><a href="about.html">about</a> | <a href="help.html">help</a> | © collabcove</center>
   </footer>
   <!--<center><div style="border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; -khtml-border-radius: 10px; -icab-border-radius: 10px; -o-border-radius: 10px; border-top: 1px solid #cccccc; border-bottom: 5px solid #eeeeee; background: #F9F9F9; border: 2px solid #cccccc; margin-bottom: 5px; width: 20%"; align="center";>x<br>y</div></center>-->
   
