--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
     <div class="content">
       <div class="sidenav">
             <div class="tooltip">
-              <a href="home.php">
+              <a href="home.html">
                 <center>
                   <img src="media/home.png" width="47">
                 </center>
@@ -24,7 +24,7 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip">
-              <a href="profile.php">
+              <a href="profile.html">
                 <center>
                   <img src="media/profile.png" width="45" height="45">
                 </center>
@@ -32,7 +32,7 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="settings.php">
+              <a href="settings.html">
                 <center>
                   <img src="media/settings.png" width="50">
                 </center>
@@ -41,7 +41,7 @@
             </div>
             <center style="margin-top: 50vh;"></center>
             <div class="tooltip">
-              <a href="index.php?logout='1'">
+              <a href="index.html?logout='1'">
                 <center>
                   <img src = "media/logout.png" width="40" style="bottom: 0">
                 </center>
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <form action="profile.php" method="post" enctype="multipart/form-data">
+                    <form action="profile.html" method="post" enctype="multipart/form-data">
                       <input type="file" name="file" class="chooseFile" />
                       <input type="submit" name="pic" value="Upload" class="update" />
                     </form>
@@ -89,7 +89,7 @@
             <td style="width:20%">
             </td>
             <td style="width:50%">
-              <form action="profile.php" method="post">
+              <form action="profile.html" method="post">
                 Change name
                 <br>
                 <input class="changeText" type="text" name="changeName" placeholder="<?php echo $_SESSION['name'] ?>"  required>
