--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link type = "text/css" rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
 
