--- a/register.html
+++ b/register.html
@@ -8,6 +8,7 @@
     <link type = "text/css" rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/tasks.js"></script>
   </head>
   <body>
 
