--- a/register.html
+++ b/register.html
@@ -9,6 +9,15 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/tasks.js"></script>
+    <script>
+    function register() {
+      localStorage.setItem("name", document.getElementById('name').value);
+      localStorage.setItem("email", document.getElementById('email').value);
+      localStorage.setItem("password", document.getElementById('password_1').value);
+      //document.location.href = https://hannah.kim.gitlab.io/collabcove/home.html;
+      console.log("x");
+      }
+      </script>
   </head>
   <body>
 
