--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
           <td width="50%">Already have an account? <a href="index.html">Login</a></td>
           <td width="50%" valign="middle" align="right">
             <!--<button type="submit" class="login" name="register">Register</button>-->
-            <input type="button" class="login" id="register" onclick="register()">Register</button>
+            <input type="button" class="login" id="register" onclick="register()">Register</input>
           </td>
         </tr>
       </table>
