--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
           <td width="50%">Already have an account? <a href="index.html">Login</a></td>
           <td width="50%" valign="middle" align="right">
             <!--<button type="submit" class="login" name="register">Register</button>-->
-            <input type="button" class="login" id="register" onclick="register()" value="Register">Register</input>
+            <input type="button" class="login" id="register" onclick="register()" value="Register">Register
             <script>
     function register() {
       localStorage.setItem("name", document.getElementById('name').value);
