--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
       localStorage.setItem("name", document.getElementById('name').value);
       localStorage.setItem("email", document.getElementById('email').value);
       localStorage.setItem("password", document.getElementById('password_1').value);
-      //document.location.href = https://hannah.kim.gitlab.io/collabcove/home.html;
+      window.location = https://hannah.kim.gitlab.io/collabcove/home.html;
       console.log("x");
       }
       </script>
