--- a/register.html
+++ b/register.html
@@ -9,6 +9,15 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/tasks.js"></script>
+    <script>
+    function register() {
+      localStorage.setItem("name", document.getElementById('name').value);
+      localStorage.setItem("email", document.getElementById('email').value);
+      localStorage.setItem("password", document.getElementById('password_1').value);
+      window.location = "https://hannah.kim.gitlab.io/collabcove/home.html";
+      console.log("x");
+      }
+      </script>
   </head>
   <body>
 
@@ -42,15 +51,6 @@
           <td width="50%" valign="middle" align="right">
             <!--<button type="submit" class="login" name="register">Register</button>-->
             <input type="button" class="login" id="register" onclick="register()" value="Register">Register
-            <script>
-    function register() {
-      localStorage.setItem("name", document.getElementById('name').value);
-      localStorage.setItem("email", document.getElementById('email').value);
-      localStorage.setItem("password", document.getElementById('password_1').value);
-      window.location = https://hannah.kim.gitlab.io/collabcove/home.html;
-      console.log("x");
-      }
-      </script>
           </td>
         </tr>
       </table>
