--- a/register.html
+++ b/register.html
@@ -37,7 +37,8 @@
   <br>
   <br>
   <center>
-    <form action="register.html" method="post">
+    <!--<form action="register.html" method="post">-->
+    <form>
       <div width=22vw>
         <input class="input_field" type="text" id="email" name="email" placeholder="Email" value="" required><br><br>
         <input class="input_field" type="text" id="name" name="name" placeholder="Full Name" value="" required><br><br>
