--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
   <br>
   <center>
     <!--<form action="register.html" method="post">-->
-    <form>
+    <!--<form>-->
       <div width=22vw>
         <input class="input_field" type="text" id="email" name="email" placeholder="Email" value="" required><br><br>
         <input class="input_field" type="text" id="name" name="name" placeholder="Full Name" value="" required><br><br>
@@ -57,7 +57,7 @@
           </td>
         </tr>
       </table>
-    </form>
+    <!--</form>-->
   </center>
   <footer>
       <center><a href="about.html">about</a> | <a href="help.html">help</a> | © collabcove</center>
