--- a/profile.html
+++ b/profile.html
@@ -110,10 +110,10 @@
           </tr>
           <tr>
             <td>
-                <button type="button" onclick="switchThemeNormal()" id="normalTheme">Normal</button>
+                <button onclick="switchThemeNormal()">Normal</button>
             </td>
             <td>
-                <button type="button" onclick="switchTheme()" id="darkTheme">Dark</button>
+                <button onclick="switchTheme()">Dark</button>
             </td>
             <td>
               <?php include('errors.php') ?>
