--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,17 @@
     <link type="text/css" rel="stylesheet" href="css/style.css", id="theme">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
+    <script>
+    function switchTheme(){
+    document.getElementById('theme').href = "css/dark-style.css";
+    localStorage.setItem("theme", "css/dark-style.css");
+    }
+    
+    function switchThemeNormal(){
+    document.getElementById('theme').href = "css/style.css";
+    localStorage.setItem("theme", "css/style.css");
+    }
+    </script>
   </head>
 
   <body onload="setTheme()">
