--- a/home.html
+++ b/home.html
@@ -5,16 +5,20 @@
 <html>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link type = "text/css" rel="stylesheet" href="css/style.css" id="theme">
+    <link type = "text/css" rel="stylesheet" id="theme">
+
+    <script>
+    if  (localStorage.getItem("theme") == null) {
+        localStorage.setItem("theme", "css/style.css");
+    }
+    document.getElementById('theme').href = localStorage.getItem("theme");
+    </script>
+
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/tasks.js"></script>
   </head>
-<<<<<<< HEAD
   <body onload="loadProjects(), setTheme(), setButton()">
-=======
-  <body onload="loadProjects(), setTheme()">
->>>>>>> 8c66a299d7aebb38891a7e249f103495548ddae5
       <!--<?php if  (isset($_SESSION['success'])): ?>-->
         <div class = "content">
           <div class="sidenav">
