--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
             <div class="tooltip">
               <a href="home.html">
                 <center>
-                  <img src="media/home.png" width="47" style="padding-bottom: 10px">
+                  <img src="media/home.png" width="47">
                 </center>
               </a>
               <span class="tooltiptext">Home</span>
@@ -38,33 +38,9 @@
               <span class="tooltiptext">Profile</span>
             </div>
             <div class="tooltip">
-              <a href="tasks.html">
-                <center>
-                  <img src="media/tasks.png" width="50" height="50">
-                </center>
-              </a>
-              <span class="tooltiptext">Tasks</span>
-            </div>
-            <!--<div class="tooltip">
-              <a href="messages.php">
-                <center>
-                  <img src="media/messages.png" width="60" height="60">
-                </center>
-              </a>
-              <span class="tooltiptext">Messages</span>
-            </div>
-            <div class="tooltip">
-              <a href="calendar.php">
-                <center>
-                  <img src="media/calendar.png" width="40" height="40">
-                </center>
-              </a>
-              <span class="tooltiptext">Calendar</span>
-            </div>-->
-            <div class="tooltip">
               <a href="settings.html">
                 <center>
-                  <img src="media/settings.png" width="50" style="margin-top: 5px">
+                  <img src="media/settings.png" width="50">
                 </center>
               </a>
               <span class="tooltiptext">Settings</span>
@@ -85,7 +61,6 @@
             </h1>
           </div>
           <br>
-          <div width="100%" class="orLine"></div>
     </div>
     <center style="margin-top: 40vh;"></center>
     <div class="main" style="color:red;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
